--- a/dashboard.css
+++ b/dashboard.css
@@ -1,18 +1,5 @@
-.chart-container {
-    /* display: inline-block; */
+#chart-container {
     position: relative;
     height: 50vh;
     width: 100%;
-}
-
-#chart-container-month {
-    z-index: 0;
-}
-
-#chart-container-all-time {
-    z-index: 1;
-}
-
-.containers {
-    position: relative;
 }
